test/project_v222/config/default/admissionwebhookconfig_patch.yaml
# This file is generated by kubebuilder

# TODO: decide if it's reasonable to split the patches into different files

apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: test-mutating-webhook-cfg
  annotations:
    certmanager.k8s.io/inject-ca-from: $(NAMESPACE)/$(CERTIFICATENAME)
webhooks:
- clientConfig:
    service:
      name: webhook-service
      namespace: $(NAMESPACE)
  name: foo-webhook.foo.com
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: test-mutating-webhook-cfg
  annotations:
    certmanager.k8s.io/inject-ca-from: $(NAMESPACE)/$(CERTIFICATENAME)
webhooks:
- clientConfig:
    service:
      name: webhook-service
      namespace: $(NAMESPACE)
  name: bar-webhook.foo.com
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: test-validating-webhook-cfg
  annotations:
    certmanager.k8s.io/inject-ca-from: $(NAMESPACE)/$(CERTIFICATENAME)
webhooks:
- clientConfig:
    service:
      name: webhook-service
      namespace: $(NAMESPACE)
  name: baz-webhook.foo.com
