test/project_v222/config/default/manager_patch.yaml
# This file is generated by kubebuilder
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: controller-manager
  namespace: system
spec:
  template:
    metadata:
      labels:
        additional-label: foo # additional labels
    spec:
      containers:
      - name: manager
        ports:
          - containerPort: 9876 # port number should match the one specified in the go struct
            name: webhook-server
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: system
spec:
  # technically selector is considered as deployment
  selector:
    additionallabels: foo # additional labels
  ports:
  - port: 443
